<resources>
    <string name="app_name">Counting Coins</string>
    <string name="app_title">Coin Counting</string>
    <string name="app_button">Check Balance</string>
    <string name="secondpanel_title">Enter Amount of Coins</string>

    <string-array name="secondPanel_spinner">
        <item>Save</item>
        <item>Spend</item>
    </string-array>

    <string name="secondPanel_quarters">Quarters (Enter 0 if No Quarters)</string>
    <string name="secondPanel_dimes">Dimes (Enter 0 if No Dimes)</string>
    <string name="secondPanel_nickels">Nickels (Enter 0 if No Nickels)</string>
    <string name="secondPanel_pennies">Pennies (Enter 0 if No Pennies)</string>
    <string name="secondPanel_button">Calculate</string>
</resources>